util/health/testdata/deployment-suspended.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  annotations:
    deployment.kubernetes.io/revision: "4"
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1beta2","kind":"Deployment","metadata":{"annotations":{},"labels":{"app.kubernetes.io/instance":"guestbook-default"},"name":"guestbook-ui","namespace":"default"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"guestbook-ui"}},"template":{"metadata":{"labels":{"app":"guestbook-ui","app.kubernetes.io/instance":"guestbook-default"}},"spec":{"containers":[{"image":"gcr.io/heptio-images/ks-guestbook-demo:0.3","name":"guestbook-ui","ports":[{"containerPort":80}]}]}}}}
  creationTimestamp: 2018-07-18T04:40:44Z
  generation: 4
  labels:
    app.kubernetes.io/instance: guestbook-default
  name: guestbook-ui
  namespace: default
  resourceVersion: "12819"
  selfLink: /apis/extensions/v1beta1/namespaces/default/deployments/guestbook-ui
  uid: bb9af0c7-8a44-11e8-9e23-42010aa80010
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: guestbook-ui
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  paused: true
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: guestbook-ui
        app.kubernetes.io/instance: guestbook-default
    spec:
      containers:
      - image: gcr.io/heptio-images/ks-guestbook-demo:0.3
        imagePullPolicy: IfNotPresent
        name: guestbook-ui
        ports:
        - containerPort: 80
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status:
  availableReplicas: 1
  conditions:
  - lastTransitionTime: 2018-07-18T04:48:48Z
    lastUpdateTime: 2018-07-18T04:48:48Z
    message: Deployment has minimum availability.
    reason: MinimumReplicasAvailable
    status: "True"
    type: Available
  - lastTransitionTime: 2018-07-18T04:40:44Z
    lastUpdateTime: 2018-07-18T06:19:22Z
    message: ReplicaSet "guestbook-ui-75dd4d49d5" is progressing.
    reason: ReplicaSetUpdated
    status: "True"
    type: Progressing
  observedGeneration: 4
  readyReplicas: 1
  replicas: 2
  unavailableReplicas: 1
  updatedReplicas: 1
