util/health/testdata/ingress-nonemptylist.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  generation: 1
  labels:
    app: grafana
    app.kubernetes.io/instance: grafana
    chart: grafana-1.12.0
    heritage: Tiller
    release: grafana
  name: grafana
  namespace: test-ops
spec:
  rules:
  - host: grafana.com
    http:
      paths:
      - backend:
          serviceName: grafana
          servicePort: 80
        path: /
  tls:
  - hosts:
    - grafana.com
    secretName: my-secret
status:
  loadBalancer:
    ingress:
    - {}
