util/health/testdata/pod-running-restart-onfailure.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: 2018-12-02T09:47:10Z
  name: my-pod
  namespace: argocd
  resourceVersion: "153419"
  selfLink: /api/v1/namespaces/argocd/pods/my-pod
  uid: 3cf9325e-f617-11e8-a057-fe5f49266390
spec:
  containers:
  - command:
    - sh
    - -c
    - exit 1
    image: alpine:latest
    imagePullPolicy: Always
    name: main
    resources: {}
    terminationMessagePath: /dev/termination-log
    terminationMessagePolicy: File
    volumeMounts:
    - mountPath: /var/run/secrets/kubernetes.io/serviceaccount
      name: default-token-f9jvj
      readOnly: true
  dnsPolicy: ClusterFirst
  nodeName: minikube
  restartPolicy: OnFailure
  schedulerName: default-scheduler
  securityContext: {}
  serviceAccount: default
  serviceAccountName: default
  terminationGracePeriodSeconds: 30
  tolerations:
  - effect: NoExecute
    key: node.kubernetes.io/not-ready
    operator: Exists
    tolerationSeconds: 300
  - effect: NoExecute
    key: node.kubernetes.io/unreachable
    operator: Exists
    tolerationSeconds: 300
  volumes:
  - name: default-token-f9jvj
    secret:
      defaultMode: 420
      secretName: default-token-f9jvj
status:
  conditions:
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:47:10Z
    status: "True"
    type: Initialized
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:47:10Z
    message: 'containers with unready status: [main]'
    reason: ContainersNotReady
    status: "False"
    type: Ready
  - lastProbeTime: null
    lastTransitionTime: 2018-12-02T09:47:10Z
    status: "True"
    type: PodScheduled
  containerStatuses:
  - containerID: docker://977dcb5c66325385f6df86276a3bcc2419e6aecc0b6682ab90853bd30f21fa51
    image: alpine:latest
    imageID: docker-pullable://alpine@sha256:621c2f39f8133acb8e64023a94dbdf0d5ca81896102b9e57c0dc184cadaf5528
    lastState:
      terminated:
        containerID: docker://977dcb5c66325385f6df86276a3bcc2419e6aecc0b6682ab90853bd30f21fa51
        exitCode: 1
        finishedAt: 2018-12-02T09:48:54Z
        reason: Error
        startedAt: 2018-12-02T09:48:54Z
    name: main
    ready: false
    restartCount: 4
  hostIP: 192.168.64.41
  phase: Running
  podIP: 172.17.0.9
  qosClass: BestEffort
  startTime: 2018-12-02T09:47:10Z
