util/health/testdata/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  annotations:
    kubectl.kubernetes.io/last-applied-configuration: |
      {"apiVersion":"apps/v1beta2","kind":"StatefulSet","metadata":{"annotations":{},"labels":{"app":"redis","applications.argoproj.io/app-name":"redis","chart":"redis-3.6.5","heritage":"Tiller","release":"redis"},"name":"redis-master","namespace":"default"},"spec":{"selector":{"matchLabels":{"app":"redis","release":"redis","role":"master"}},"serviceName":"redis-master","template":{"metadata":{"labels":{"app":"redis","applications.argoproj.io/app-name":"redis","release":"redis","role":"master"}} [...]
  creationTimestamp: 2018-07-20T08:23:04Z
  generation: 1
  labels:
    app: redis
    applications.argoproj.io/app-name: redis
    chart: redis-3.6.5
    heritage: Tiller
    release: redis
  name: redis-master
  namespace: default
  resourceVersion: "514251"
  selfLink: /apis/apps/v1/namespaces/default/statefulsets/redis-master
  uid: 1f80ab97-8bf6-11e8-aff0-42010a8a0fc6
spec:
  podManagementPolicy: OrderedReady
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: redis
      release: redis
      role: master
  serviceName: redis-master
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: redis
        applications.argoproj.io/app-name: redis
        release: redis
        role: master
    spec:
      containers:
      - env:
        - name: REDIS_REPLICATION_MODE
          value: master
        - name: REDIS_PASSWORD
          valueFrom:
            secretKeyRef:
              key: redis-password
              name: redis
        - name: REDIS_DISABLE_COMMANDS
          value: FLUSHDB,FLUSHALL
        image: docker.io/bitnami/redis:4.0.10-debian-9
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 30
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 5
        name: redis
        ports:
        - containerPort: 6379
          name: redis
          protocol: TCP
        readinessProbe:
          exec:
            command:
            - redis-cli
            - ping
          failureThreshold: 5
          initialDelaySeconds: 5
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /bitnami/redis/data
          name: redis-data
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext:
        fsGroup: 1001
        runAsUser: 1001
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
  updateStrategy:
    type: OnDelete
  volumeClaimTemplates:
  - metadata:
      creationTimestamp: null
      labels:
        app: redis
        chart: redis-3.6.5
        component: master
        heritage: Tiller
        release: redis
      name: redis-data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 8Gi
    status:
      phase: Pending
status:
  collisionCount: 0
  currentReplicas: 1
  currentRevision: redis-master-7b8f75b98
  observedGeneration: 1
  readyReplicas: 1
  replicas: 1
  updateRevision: redis-master-7b8f75b98
