util/health/testdata/svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-connection-idle-timeout: "600"
  creationTimestamp: 2018-06-05T23:34:58Z
  labels:
    applications.argoproj.io/app-name: argocd-cdp
  name: argocd-server
  namespace: argocd
  resourceVersion: "32559487"
  selfLink: /api/v1/namespaces/argocd/services/argocd-server
  uid: 0f5885a9-6919-11e8-ad29-020124679688
spec:
  clusterIP: 100.69.46.185
  externalTrafficPolicy: Cluster
  ports:
  - name: http
    nodePort: 30354
    port: 80
    protocol: TCP
    targetPort: 8080
  - name: https
    nodePort: 31866
    port: 443
    protocol: TCP
    targetPort: 8080
  selector:
    app: argocd-server
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - hostname: abc123.us-west-2.elb.amazonaws.com
